[gd_scene load_steps=2 format=2]

[ext_resource path="res://GroundControl.gd" type="Script" id=1]

[node name="GroundControl" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.152941, 0.14902, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="O2" type="Button" parent="CanvasLayer"]
margin_left = 288.0
margin_top = 320.0
margin_right = 352.0
margin_bottom = 340.0
text = "Oxygen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accuracy" type="Button" parent="CanvasLayer"]
margin_left = 152.0
margin_top = 256.0
margin_right = 232.0
margin_bottom = 276.0
text = "Accuracy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Accuracy"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 38.0
align = 1
valign = 1

[node name="Attack" type="Button" parent="CanvasLayer"]
margin_left = 216.0
margin_top = 168.0
margin_right = 296.0
margin_bottom = 188.0
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Attack"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 38.0
align = 1
valign = 1

[node name="Speed" type="Button" parent="CanvasLayer"]
margin_left = 280.0
margin_top = 256.0
margin_right = 360.0
margin_bottom = 276.0
text = "Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Speed"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 38.0
align = 1
valign = 1

[node name="Defense" type="Button" parent="CanvasLayer"]
margin_left = 408.0
margin_top = 256.0
margin_right = 488.0
margin_bottom = 276.0
text = "Defense"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Defense"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 38.0
align = 1
valign = 1

[node name="Dodge" type="Button" parent="CanvasLayer"]
margin_left = 408.0
margin_top = 168.0
margin_right = 488.0
margin_bottom = 188.0
text = "Dodge"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Dodge"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 38.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="o2_1" type="Line2D" parent="CanvasLayer"]
points = PoolVector2Array( 192, 296, 448, 296 )
width = 3.0
default_color = Color( 0.988235, 0.00784314, 0.00784314, 1 )

[node name="o2_2" type="Line2D" parent="CanvasLayer"]
points = PoolVector2Array( 320, 312, 320, 296 )
width = 3.0
default_color = Color( 0.984314, 0.0196078, 0.0196078, 1 )

[node name="as_1" type="Line2D" parent="CanvasLayer"]
points = PoolVector2Array( 192, 248, 192, 224, 320, 224, 320, 248 )
width = 3.0
default_color = Color( 1, 0, 0, 1 )

[node name="defense_line" type="Line2D" parent="CanvasLayer"]
points = PoolVector2Array( 448, 248, 448, 208 )
width = 3.0
default_color = Color( 1, 0, 0, 1 )

[node name="as_2" type="Line2D" parent="CanvasLayer"]
points = PoolVector2Array( 256, 224, 256, 208 )
width = 3.0
default_color = Color( 1, 0, 0, 1 )
[connection signal="pressed" from="CanvasLayer/O2" to="." method="_on_O2_pressed"]
[connection signal="pressed" from="CanvasLayer/Accuracy" to="." method="_on_Accuracy_pressed"]
[connection signal="pressed" from="CanvasLayer/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="CanvasLayer/Speed" to="." method="_on_Speed_pressed"]
[connection signal="pressed" from="CanvasLayer/Defense" to="." method="_on_Defense_pressed"]
[connection signal="pressed" from="CanvasLayer/Dodge" to="." method="_on_Dodge_pressed"]
